--- a/package.json
+++ b/package.json
@@ -1,65 +1,67 @@
 {
-  "name": "prirucka-senzoricke-integrace",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/core": "^10.1.1",
-    "@emotion/is-prop-valid": "^0.8.8",
-    "@emotion/styled": "^10.0.27",
-    "color": "^3.1.3",
-    "emotion-theming": "^10.0.27",
-    "gh-pages": "^3.1.0",
-    "lodash-es": "^4.17.15",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "sanitize.css": "^12.0.1",
-    "styled-system": "^5.1.5"
-  },
-  "devDependencies": {
-    "@types/color": "^3.0.1",
-    "@types/lodash-es": "^4.17.3",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "@types/styled-system": "^5.1.10",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-emotion": "^10.0.27",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-no-loops": "^0.3.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-recommended": "^3.0.0",
-    "typescript": "^4.0.3",
-    "typescript-styled-plugin": "^0.15.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "prirucka-senzoricke-integrace",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"@emotion/core": "^10.1.1",
+		"@emotion/is-prop-valid": "^0.8.8",
+		"@emotion/styled": "^10.0.27",
+		"color": "^3.1.3",
+		"emotion-theming": "^10.0.27",
+		"gh-pages": "^3.1.0",
+		"lodash-es": "^4.17.15",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"react-scripts": "4.0.0",
+		"sanitize.css": "^12.0.1",
+		"styled-system": "^5.1.5"
+	},
+	"devDependencies": {
+		"@types/color": "^3.0.1",
+		"@types/lodash-es": "^4.17.3",
+		"@types/node": "^12.0.0",
+		"@types/react": "^16.9.53",
+		"@types/react-dom": "^16.9.8",
+		"@types/styled-system": "^5.1.10",
+		"eslint-config-prettier": "^6.15.0",
+		"eslint-import-resolver-alias": "^1.1.2",
+		"eslint-plugin-emotion": "^10.0.27",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-no-loops": "^0.3.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.21.5",
+		"eslint-plugin-react-hooks": "4.2.0",
+		"prettier": "^2.1.2",
+		"stylelint": "^13.7.2",
+		"stylelint-config-recommended": "^3.0.0",
+		"typescript": "^4.0.3",
+		"typescript-styled-plugin": "^0.15.0"
+	},
+	"scripts": {
+		"predeploy": "yarn build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
